Shut up deprecation warning